@@ -14,6 +14,7 @@ mymovie: t_sakurai
 newbb: Ryuji
 newbb2: D.J.
 news: chanoir
+pbboard: karedokx
 piCal-0.6x: GIJOE
 popnupblog: dashboard
 sections: onego
