@@ -1,3 +1,6 @@
+- added a plugin
+-- pbboard (thx karedokx)
+
 1.11 2005-06-15
 
 - modified xml_google.php for Google sitemaps
